ci(sync): switch remote URL from HTTPS to SSH in cailab sync workflow
The workflow step for adding a public git remote previously used HTTPS with an embedded `${GH_TOKEN}` for authentication. This has been updated to use the SSH protocol (`git@github.com:...`) instead. This change is likely intended to fix authentication issues or align with deployed key setups in the CI environment.

--- a/.github/workflows/sync-cailab-amplicon.yml
+++ b/.github/workflows/sync-cailab-amplicon.yml
@@ -23,5 +23,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUBACTIONS }}
         run: |
           cd packages/cailab.amplicon
-          git remote add public https://${GH_TOKEN}@github.com/SyntheticCommunity/cailab.amplicon.git
+          git remote add public git@github.com:SyntheticCommunity/cailab.amplicon.git
           git push public HEAD:main --force
