Change branch from 'main' to 'master' in workflow

--- a/.github/workflows/sync-cailab-amplicon.yml
+++ b/.github/workflows/sync-cailab-amplicon.yml
@@ -2,7 +2,7 @@ name: Sync cailab.amplicon to standalone repo
 
 on:
   push:
-    branches: [ main ] # 建议加上分支限制
+    branches: [ master ] # 建议加上分支限制
     paths:
       - 'packages/cailab.amplicon/**'
 
